--- a/apps/argocd/base/core/argocd.yaml
+++ b/apps/argocd/base/core/argocd.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   project: core
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/argocd
     targetRevision: main
   destination:
