--- a/apps/argocd/base/apps/agones-crd.yaml
+++ b/apps/argocd/base/apps/agones-crd.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: apps
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/services/agones
     targetRevision: main
   destination:
