--- a/apps/argocd/base/core/nvidia-extra.yaml
+++ b/apps/argocd/base/core/nvidia-extra.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: core
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/monitoring/nvidia
     targetRevision: main
   destination:
