--- a/apps/argocd/base/core/utilities.yaml
+++ b/apps/argocd/base/core/utilities.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: cluster
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/argocd/base/utilities
     targetRevision: main
   destination:
