--- a/apps/argocd/base/data/cloudnative.yaml
+++ b/apps/argocd/base/data/cloudnative.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: cluster
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/data/postgres/cloudnative
     targetRevision: main
   destination:
