--- a/apps/argocd/base/matrix/discord.yaml
+++ b/apps/argocd/base/matrix/discord.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: matrix
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/matrix/bridges/discord
     targetRevision: main
   destination:
