--- a/apps/argocd/base/matrix/telegram.yaml
+++ b/apps/argocd/base/matrix/telegram.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: matrix
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/matrix/bridges/telegram
     targetRevision: main
   destination:
