--- a/apps/argocd/base/monitoring/kube-prometheus.yaml
+++ b/apps/argocd/base/monitoring/kube-prometheus.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: monitoring
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/monitoring/kube-prometheus
     targetRevision: main
   destination:
