--- a/apps/argocd/base/monitoring/kuma.yaml
+++ b/apps/argocd/base/monitoring/kuma.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: monitoring
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/monitoring/uptime-kuma
     targetRevision: main
   destination:
