--- a/apps/argocd/base/networking/tailscale.yaml
+++ b/apps/argocd/base/networking/tailscale.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: networking
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/networking/tailscale
     targetRevision: main
   destination:
