--- a/apps/argocd/base/services/metabase.yaml
+++ b/apps/argocd/base/services/metabase.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: services
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/data/metabase
     targetRevision: main
   destination:
