--- a/apps/argocd/base/services/mlops.yaml
+++ b/apps/argocd/base/services/mlops.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: apps
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/argocd/base/mlops
     targetRevision: main
   destination:
