--- a/apps/argocd/base/services/n8n.yaml
+++ b/apps/argocd/base/services/n8n.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: apps
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/services/n8n
     targetRevision: main
   destination:
