--- a/apps/argocd/base/services/squid.yaml
+++ b/apps/argocd/base/services/squid.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: networking
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/networking/squid
     targetRevision: main
   destination:
