--- a/apps/argocd/base/utilities/kured.yaml
+++ b/apps/argocd/base/utilities/kured.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: cluster
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/utilities/kured
     targetRevision: main
   destination:
