--- a/apps/monitoring/kube-prometheus/components.yaml
+++ b/apps/monitoring/kube-prometheus/components.yaml
@@ -3,11 +3,11 @@ kind: Application
 metadata:
   name: kube-prometheus-components
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+  - resources-finalizer.argocd.argoproj.io
 spec:
   project: monitoring
   source:
-    repoURL: 'https://github.com/gruberdev/homelab.git'
+    repoURL: 'https://github.com/chalk-hwang/testlab.git'
     path: apps/monitoring/kube-prometheus/base
     targetRevision: main
   destination:
